fill HP, add styles for HP, align wrapper maxWidth, prevent header shrinking, add hero asset

--- a/src/components/organisms/Header/header.module.scss
+++ b/src/components/organisms/Header/header.module.scss
@@ -6,6 +6,7 @@
     height: variables.$navbar-height;
     background: rgba(0, 0, 0, 0.7);
     position: sticky;
+    flex-shrink: 0;
     top: 0;
 }
 
