--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,8 +15,9 @@ main {
 }
 
 .wrapper {
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
+    padding: 0 1rem;
 }
 
 .bold {
